--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+    "dateformat": "^1.0.12",
     "debug": "~2.2.0",
     "ejs": "^2.5.2",
     "exotel": "^1.0.1",
