--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "dateformat": "^1.0.12",
     "debug": "~2.2.0",
+    "dht-sensor": "0.0.4",
     "ejs": "^2.5.2",
     "exotel": "^1.0.1",
     "express": "~4.14.0",
